tests/paczka1/small_fuzzy/81043813.err
Error in line 5: 9MVxDtv1Iz A626 5,0
Error in line 7: zJk0 S502 76,9
Error in line 4: IRWgC S247 80,7
